# Stanford-CS-242-Programming-Languages

./: .gitignore  README.md
hw1/: README.txt  numpy_problems.py  problem.ski  ski_abstraction.py  ski_derivation.md  ski_eval.py
hw1/src/: main_ski.py  submit.py
hw1/test/: test.ski  test_numpy.py
hw2/: README.txt  lam_tran.py  problem.lam  ski_eval.py
hw2/src/: lam.py  lam_prog.lark  lam_prog.py  main_lam.py  main_ski.py  ski.py  ski_prog.lark  ski_prog.py  submit.py
hw2/test/: test.lam
hw3/: problem.st  tmp.md  typecheck.py
hw3/src/: eval.py  lam.py  lam_prog.lark  lam_prog.py  main.py  submit.py
hw3/tests/: n-app-copy.st  y-id.st  (+10 more)
hw4/: interpreter.py  problem.objc  problem.objc.golden  problem_test.objc
hw5/: Cargo.toml  README.txt  submit.py
hw5/part2/: Cargo.toml
hw5/part2/src/: lib.rs
hw5/part2/src/prob2/: client.rs  mod.rs  msg.rs  server.rs
hw5/part2/src/prob3/: mod.rs  sendall.rs
hw5/part2/tests/prob2/: mod.rs
hw5/part2/tests/prob2/custom/: mod.rs
hw5/part2/tests/prob2/provided/: client_invalid_method1.rs  client_invalid_method1.stderr  client_invalid_method2.rs  client_invalid_method2.stderr  client_invalid_object.rs  client_invalid_object.stderr  mod.rs
hw5/part2/tests/prob3/custom/: mod.rs
hw5/part2/tests/prob3/provided/: mod.rs
hw6/: prob1.rkt  prob2.rkt  prob3.rkt  prob4.rkt
hw7/: README.txt  problem1.pi  problem2.pi  problem3.pi  problem4.pi  translate.py
hw8/: exercises.lean  prob01.lean  prob02.lean  prob03.lean  prob04.lean  prob05.lean  prob06.lean  prob07.lean  prob08.lean  prob09.lean  prob10.lean  prob11.lean
(+59 files in other folders)
