[package]
name = "part2"
version = "0.1.0"
authors = ["cs242-staff <cs242-win2021-staff@lists.stanford.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"

[dev-dependencies]
trybuild = "1.0"
rand = "0.8"
